@@ -1885,7 +1885,13 @@
       var self = this;
       var result;
 
-      if (window.location.hash === '#queries') {
+      var activeSubView = 'query';
+      try {
+        activeSubView = window.App.naviView.activeSubMenu.route;
+      } catch (ignore) {
+      }
+
+      if (window.location.hash === '#queries' && activeSubView === 'query') {
         var outputEditor = ace.edit('outputEditor' + counter);
 
         var maxHeight = $('.centralRow').height() - 250;
