@@ -1,6 +1,9 @@
 v3.4.1 (XXXX-XX-XX)
 -------------------
 
+* fixed issue #7586: a running query within the user interface was not shown
+  if the active view was `Running Queries` or `Slow Query History`.
+
 * fixed a rare thread local dead lock situation in replication:
   If a follower tries to get in sync in the last steps it requires
   a lock on the leader. If the follower cancels the lock before the leader
